# everyday-developer-tools

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  app.py  docker-compose-dev.yml  docker-compose.yml  helper.py  imports.py  locustfile.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  docker-image.yml  greetings.yml  publish-package.yml  stale.yml  vulnerability-check.yml
certs/: nginx-selfsigned.crt
nginx/: nginx.conf
samples/: json_schema_generator_example.jsonc  json_schema_validator_example_schema.jsonc  json_schema_validator_example_schema_input.jsonc  patterns.md  patterns.txt
static/css/: style.css
templates/: base64_encoder_decoder.html  clean_text.html  column_extractor.html  counter.html  cron_scheduler.html  diff_viewer.html  fake_data_generator.html  google_analytics.html  index.html  json_converter.html  json_parser.html  json_sample_generator.html  json_schema_generator.html  json_validator.html  jwt_viewer.html  markdown_pdf.html  navbar.html  qr_generator.html  random_number_generator.html  random_string_generator.html  regex_checker.html  regex_generator.html  shuffle_letters.html  text_statistics.html  time_converter.html  yaml_to_json.html
tests/: test_app.py
