[project]
name = "everyday-developer-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout==5.0.1",
    "attrs==25.1.0",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "commonmark==0.9.1",
    "configargparse==1.7",
    "cryptography==44.0.1",
    "cssselect2==0.7.0",
    "deprecated==1.2.17",
    "exrex==0.12.0",
    "faker==35.0.0",
    "flask==3.1.1",
    "flask-cors==5.0.0",
    "flask-limiter==3.10.1",
    "flask-login==0.6.3",
    "fonttools==4.55.6",
    "genson==1.3.0",
    "gevent==24.11.1",
    "geventhttpclient==2.3.3",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "limits==4.0.1",
    "linecache2==1.0.0",
    "locust==2.32.6",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "nuitka==2.6",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "pdfminer-six==20240706",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "psutil==6.1.1",
    "pyarmor-cli-core==7.6.3",
    "pycparser==2.22",
    "pydyf==0.11.0",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pymupdf==1.25.2",
    "pypdf2==3.0.1",
    "pyphen==0.17.2",
    "pypng==0.20220715.0",
    "pyqrcode==1.2.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "qrcode==8.0",
    "redis==5.2.1",
    "referencing==0.36.2",
    "reportlab==4.2.5",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "six==1.17.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "traceback2==1.4.0",
    "typing-extensions==4.12.2",
    "unittest2==1.1.0",
    "urllib3==2.3.0",
    "weasyprint==63.1",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
    "wrapt==1.17.2",
    "zope-event==5.0",
    "zope-interface==7.2",
    "zopfli==0.2.3.post1",
    "zstandard==0.23.0",
]
