[project]
name = "everyday-developer-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout",
    "attrs",
    "blinker",
    "brotli",
    "certifi",
    "cffi",
    "chardet",
    "charset-normalizer",
    "click",
    "commonmark",
    "configargparse",
    "cryptography",
    "cssselect2",
    "deprecated",
    "exrex",
    "faker",
    "flask",
    "flask-cors",
    "flask-limiter",
    "flask-login",
    "fonttools",
    "genson",
    "gevent",
    "geventhttpclient",
    "greenlet",
    "gunicorn",
    "idna",
    "importlib-resources",
    "iniconfig",
    "itsdangerous",
    "jinja2",
    "jsonschema",
    "jsonschema-specifications",
    "limits",
    "linecache2",
    "locust",
    "markdown",
    "markdown-it-py",
    "markupsafe",
    "mdurl",
    "msgpack",
    "nuitka",
    "ordered-set",
    "packaging",
    "pdfminer-six",
    "pillow",
    "pluggy",
    "psutil",
    "pyarmor-cli-core",
    "pycparser",
    "pydyf",
    "pygments",
    "pyjwt",
    "pymupdf",
    "pypdf2",
    "pyphen",
    "pypng",
    "pyqrcode",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "pytz",
    "pyyaml",
    "pyzmq",
    "qrcode",
    "redis",
    "referencing",
    "reportlab",
    "requests",
    "rich",
    "rpds-py",
    "six",
    "tinycss2",
    "tinyhtml5",
    "traceback2",
    "typing-extensions",
    "unittest2",
    "urllib3",
    "weasyprint",
    "webencodings",
    "werkzeug",
    "wrapt",
    "zope-event",
    "zope-interface",
    "zopfli",
    "zstandard",
]
